force-app/main/default/objects/nepa_engagement__c.object
<CustomObject>
    <description>CEQ Standard Entity 5: Public Engagement Events. Tracks opportunities for public interaction in the environmental review process, including public meetings, hearings, scoping sessions, and tribal consultations. Distinct from case events (which are milestones); this tracks windows of public involvement.</description>
    <fields>
        <fullName>nepa_process__c</fullName>
        <description>The NEPA review process this engagement event is associated with.</description>
        <inlineHelpText>The NEPA review process this engagement event is associated with.</inlineHelpText>
        <label>Process</label>
        <referenceTo>IndividualApplication</referenceTo>
        <relationshipLabel>Public Engagement Events</relationshipLabel>
        <relationshipName>Public_Engagement_Events</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>nepa_engagement_type__c</fullName>
        <description>Type of public engagement event per CEQ standard Entity 5 Type property.</description>
        <inlineHelpText>Type of engagement: Public Meeting, Notice, Solicitation, Tribal Consultation, Scoping, or Other.</inlineHelpText>
        <label>Engagement Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Public Meeting</fullName>
                </value>
                <value>
                    <fullName>Public Hearing</fullName>
                </value>
                <value>
                    <fullName>Notice</fullName>
                </value>
                <value>
                    <fullName>Comment Solicitation</fullName>
                </value>
                <value>
                    <fullName>Scoping Meeting</fullName>
                </value>
                <value>
                    <fullName>Tribal Consultation</fullName>
                </value>
                <value>
                    <fullName>Open House</fullName>
                </value>
                <value>
                    <fullName>Virtual Webinar</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nepa_start_datetime__c</fullName>
        <description>Event start date and time.</description>
        <inlineHelpText>Event start date and time.</inlineHelpText>
        <label>Start Date/Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nepa_end_datetime__c</fullName>
        <description>Event end date and time, if applicable.</description>
        <inlineHelpText>Event end date and time.</inlineHelpText>
        <label>End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nepa_location_format__c</fullName>
        <description>Whether the engagement event is in-person, virtual, or hybrid.</description>
        <inlineHelpText>Format of the engagement event: In-Person, Virtual, or Hybrid.</inlineHelpText>
        <label>Location Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-Person</fullName>
                </value>
                <value>
                    <fullName>Virtual</fullName>
                </value>
                <value>
                    <fullName>Hybrid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nepa_location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Physical or virtual location of the engagement event.</description>
        <inlineHelpText>Physical or virtual location of the engagement event.</inlineHelpText>
        <label>Location</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Engagement Events</relationshipLabel>
        <relationshipName>Engagement_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nepa_attendance_count__c</fullName>
        <description>Number of participants who attended this engagement event.</description>
        <inlineHelpText>Participant count for this engagement event.</inlineHelpText>
        <label>Attendance Count</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nepa_public_access__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether this engagement event is publicly visible.</description>
        <inlineHelpText>Check if this event is publicly visible.</inlineHelpText>
        <label>Public Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nepa_document__c</fullName>
        <description>ContentDocumentId of the document released or referenced at this engagement event (e.g., Draft EIS published for public comment). Satisfies CEQ Entity 5 Related Document ID property. ContentDocument cannot be a Lookup target via Metadata API; stored as an 18-char ID reference.</description>
        <inlineHelpText>18-character Salesforce ContentDocumentId for the document associated with this engagement event.</inlineHelpText>
        <label>Related Document ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nepa_notes__c</fullName>
        <description>Additional notes about this engagement event.</description>
        <inlineHelpText>Additional notes or context for this engagement event.</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <!-- Engagement Quality fields (Mandate 3: data deficit identified in academic EIS responsiveness research) -->

    <fields>
        <fullName>nepa_registered_count__c</fullName>
        <description>Number of participants who pre-registered for this event. Compared against nepa_attendance_count__c to calculate attendance rate. Supports engagement quality reporting for future researchers and agency auditors who noted this data is absent from historic EIS documents.</description>
        <inlineHelpText>Pre-registered attendees. Compare to actual attendance to calculate show-up rate.</inlineHelpText>
        <label>Registered Count</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>

    <fields>
        <fullName>nepa_comments_received_count__c</fullName>
        <description>Number of written or oral comments received at or attributable to this engagement event. Enables per-event comment yield analysis — a metric that historic EIS documents failed to report and that researchers flagged as a critical engagement quality gap.</description>
        <inlineHelpText>Comments received at or directly resulting from this event.</inlineHelpText>
        <label>Comments Received Count</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>

    <fields>
        <fullName>nepa_advance_notice_days__c</fullName>
        <description>Number of calendar days between the first public notice and the event date. Shorter advance notice disproportionately disadvantages low-income and rural communities with less scheduling flexibility. CEQ best practice is 15+ days; FRA compressed timelines often result in shorter windows.</description>
        <inlineHelpText>Days of advance notice given before this event. CEQ best practice: 15 or more days.</inlineHelpText>
        <label>Advance Notice Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>

    <fields>
        <fullName>nepa_ada_accessible__c</fullName>
        <description>Whether the venue or virtual platform met ADA accessibility standards. Required for EJ compliance reporting. An agency that holds a public meeting in an inaccessible venue may face civil rights challenges under Title VI.</description>
        <inlineHelpText>Did this event meet ADA accessibility requirements?</inlineHelpText>
        <defaultValue>false</defaultValue>
        <label>ADA Accessible</label>
        <type>Checkbox</type>
    </fields>

    <fields>
        <fullName>nepa_ada_accommodations__c</fullName>
        <description>Specific ADA accommodations provided at this event. Multi-select to enable reportable breakdown of accommodation types across all engagement events in a process.</description>
        <inlineHelpText>Select all ADA accommodations provided at this event.</inlineHelpText>
        <label>ADA Accommodations Provided</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value><fullName>ASL Interpretation</fullName><default>false</default><label>ASL Interpretation</label></value>
                <value><fullName>Captioning/CART</fullName><default>false</default><label>Captioning/CART</label></value>
                <value><fullName>Wheelchair Accessible Venue</fullName><default>false</default><label>Wheelchair Accessible Venue</label></value>
                <value><fullName>Accessible Parking</fullName><default>false</default><label>Accessible Parking</label></value>
                <value><fullName>Hearing Loop/Assistive Listening</fullName><default>false</default><label>Hearing Loop/Assistive Listening</label></value>
                <value><fullName>Large Print Materials</fullName><default>false</default><label>Large Print Materials</label></value>
                <value><fullName>Screen Reader Compatible (Virtual)</fullName><default>false</default><label>Screen Reader Compatible (Virtual)</label></value>
            </valueSetDefinition>
        </valueSet>
    </fields>

    <fields>
        <fullName>nepa_translation_services__c</fullName>
        <description>Whether any translation or interpretation services were provided. Agencies serving communities with limited English proficiency must provide language access under Executive Order 13166 and Title VI. Historic EIS documents rarely reported this data.</description>
        <inlineHelpText>Were translation or interpretation services provided at this event?</inlineHelpText>
        <defaultValue>false</defaultValue>
        <label>Translation Services Provided</label>
        <type>Checkbox</type>
    </fields>

    <fields>
        <fullName>nepa_interpreter_languages__c</fullName>
        <description>Languages for which live interpretation was provided (oral) or written materials were translated. Multi-select enables aggregate reporting of language access coverage across all engagement events in a process — data that was absent from historic EIS documents reviewed in academic research.</description>
        <inlineHelpText>Select all languages for which interpretation or translated materials were available.</inlineHelpText>
        <label>Interpreter Languages</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value><fullName>Spanish</fullName><default>false</default><label>Spanish</label></value>
                <value><fullName>Mandarin Chinese</fullName><default>false</default><label>Mandarin Chinese</label></value>
                <value><fullName>Cantonese Chinese</fullName><default>false</default><label>Cantonese Chinese</label></value>
                <value><fullName>Vietnamese</fullName><default>false</default><label>Vietnamese</label></value>
                <value><fullName>Korean</fullName><default>false</default><label>Korean</label></value>
                <value><fullName>Arabic</fullName><default>false</default><label>Arabic</label></value>
                <value><fullName>Tagalog/Filipino</fullName><default>false</default><label>Tagalog/Filipino</label></value>
                <value><fullName>Haitian Creole</fullName><default>false</default><label>Haitian Creole</label></value>
                <value><fullName>Portuguese</fullName><default>false</default><label>Portuguese</label></value>
                <value><fullName>Russian</fullName><default>false</default><label>Russian</label></value>
                <value><fullName>French</fullName><default>false</default><label>French</label></value>
                <value><fullName>Navajo/Diné</fullName><default>false</default><label>Navajo/Diné</label></value>
                <value><fullName>Other (noted in Notes field)</fullName><default>false</default><label>Other (noted in Notes field)</label></value>
            </valueSetDefinition>
        </valueSet>
    </fields>

    <fields>
        <fullName>nepa_notification_channels__c</fullName>
        <description>Channels used to notify the public of this engagement event. Multi-select enables aggregate reporting of outreach reach and channel diversity — a metric that academic researchers flagged as systematically absent from historic EIS documents, preventing quality evaluation of public engagement efforts.</description>
        <inlineHelpText>Select all channels used to announce this event to the public.</inlineHelpText>
        <label>Public Notification Channels</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value><fullName>Federal Register Notice</fullName><default>false</default><label>Federal Register Notice</label></value>
                <value><fullName>Agency Website</fullName><default>false</default><label>Agency Website</label></value>
                <value><fullName>Email List</fullName><default>false</default><label>Email List</label></value>
                <value><fullName>Direct Mail</fullName><default>false</default><label>Direct Mail</label></value>
                <value><fullName>Local Newspaper</fullName><default>false</default><label>Local Newspaper</label></value>
                <value><fullName>Social Media</fullName><default>false</default><label>Social Media</label></value>
                <value><fullName>Radio</fullName><default>false</default><label>Radio</label></value>
                <value><fullName>Tribal Government Direct Notice</fullName><default>false</default><label>Tribal Government Direct Notice</label></value>
                <value><fullName>Community Organization Outreach</fullName><default>false</default><label>Community Organization Outreach</label></value>
                <value><fullName>Flyer/Poster Distribution</fullName><default>false</default><label>Flyer/Poster Distribution</label></value>
            </valueSetDefinition>
        </valueSet>
    </fields>

    <fields>
        <fullName>nepa_transcript_available__c</fullName>
        <description>Whether an official transcript, recording, or written summary of this event is available in the administrative record. Transcript availability is a key administrative record completeness indicator — agencies that cannot produce meeting transcripts during litigation face credibility challenges about what was actually discussed.</description>
        <inlineHelpText>Is a transcript, recording, or official summary available for this event?</inlineHelpText>
        <defaultValue>false</defaultValue>
        <label>Transcript/Recording Available</label>
        <type>Checkbox</type>
    </fields>

    <!-- Provenance fields (CEQ Standard v1.2 - required on all entities) -->
    <fields>
        <fullName>nepa_data_record_version__c</fullName>
        <description>The version of the record, for tracking updates or changes to the data.</description>
        <inlineHelpText>Version of this record for data exchange tracking.</inlineHelpText>
        <label>Data Record Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nepa_data_source_agency__c</fullName>
        <description>The name of the agency or organization that provided the data.</description>
        <inlineHelpText>Agency or organization that provided this data.</inlineHelpText>
        <label>Data Source Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nepa_data_source_system__c</fullName>
        <description>The system or database where the data originally came from.</description>
        <inlineHelpText>Source system or database for this record.</inlineHelpText>
        <label>Data Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nepa_record_owner_agency__c</fullName>
        <description>The agency responsible for maintaining or owning this record.</description>
        <inlineHelpText>Agency responsible for owning and maintaining this record.</inlineHelpText>
        <label>Record Owner Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nepa_retrieved_timestamp__c</fullName>
        <description>The date and time when this record was retrieved from its source.</description>
        <inlineHelpText>Date and time this record was retrieved from its source system.</inlineHelpText>
        <label>Retrieved Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nepa_other__c</fullName>
        <description>Extension bag for agency-specific or non-standard properties. Stores arbitrary JSON for interoperability with systems that require fields beyond the CEQ standard schema. Maps to the CEQ standard engagement.other (jsonb) property.</description>
        <inlineHelpText>JSON extension bag for additional properties not covered by the standard schema.</inlineHelpText>
        <label>Other (JSON)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>NEPA Public Engagement Event</label>
    <nameField>
        <displayFormat>ENG-{00000000}</displayFormat>
        <label>Engagement Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NEPA Public Engagement Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>