force-app/main/default/objects/nepa_engagement__c/fields/nepa_consultation_certified__c.field-meta.xml
<CustomField>
    <fullName>nepa_consultation_certified__c</fullName>
    <description>Marks this Tribal Consultation engagement event as formally certified by the responsible agency official. Required to clear the VR-005 tribal stage gate on the parent IndividualApplication before advancing to Final EIS Preparation or Record of Decision.</description>
    <inlineHelpText>Check when the agency official has formally certified that government-to-government tribal consultation requirements are met for this process. Required before advancing to Final EIS or ROD.</inlineHelpText>
    <defaultValue>false</defaultValue>
    <label>Consultation Certified</label>
    <type>Checkbox</type>
</CustomField>